# frostsnap

./: .gitignore  AUTOMATION_RESEARCH.md  Cargo.toml  fsim  justfile  simctl
.clank/finished/: android-layout-e2e.md  android-pin-provisioning.md  android-sim-disable-cdcacm.md  app-channel-only-device-driving.md  e2e-sim-harness-research.md  fsim-android-devices-count.md  fsim-android-ime-text.md  fsim-app-pixel-tap.md  fsim-dir-scoped-sessions.md  fsim-emulator-lifecycle.md  fsim-emulator-ram.md  fsim-eval-args.md  fsim-eval-full-strings.md  fsim-eval-semantics.md  fsim-eval-unified-drive.md  fsim-failure-video.md  fsim-keyboard-hint.md  fsim-label-diagnostics.md  fsim-opt-in-retries.md  fsim-recording-bracket.md  fsim-screen-recording.md  fsim-sim-delete-secure-key.md  fsim-test-worktree-isolation.md  fsim-up-instances-android.md  key-mismatch-dart-guard.md  keygen-save-settle-delay.md  lift-deviceloop-to-frostsnap-embedded.md  parallel-android-tests.md  regtest-bitcoin-receiving.md  regtest-session-lifetime.md  restore-duplicate-normal-error.md  runtime-add-devices.md  sim-1-virtual-device-hal.md  sim-10-daisy-chain.md  sim-11-sim-driving-modes.md  sim-12-reorderable-chain.md  sim-13-power-off-on-disconnect.md  sim-14-simctl-cli.md  sim-2-virtual-serial-transport.md  sim-3-rust-keygen-harness.md  (+23 more)
.github/workflows/: sim-e2e.yml
device/src/: efuse.rs  esp32_run.rs  firmware.rs  io.rs  ui.rs
frostsnap_coordinator/src/: keygen.rs
frostsnap_core/src/: coordinator.rs  device.rs  lib.rs  message.rs
frostsnap_core/tests/: endtoend.rs  malicious.rs  proptest.rs
frostsnap_embedded/src/: device_hal.rs  device_loop.rs  framed_serial.rs  frosty_ui.rs  lib.rs  ui.rs
frostsnapp/: README.md  pubspec.yaml
frostsnapp/integration_test/: keygen_test.dart
frostsnapp/lib/: contexts.dart  device_list.dart  global.dart  keygen.dart  keygen_keys.dart  main.dart  secure_key_provider.dart  sim_device_tray.dart  sim_faucet.dart  theme.dart  wallet_add.dart  wallet_create.dart  wallet_device_list.dart  wallet_receive.dart  (+2 more)
tools/sim_regtest/: Cargo.toml
tools/sim_regtest/src/: control.rs  lib.rs  main.rs
tools/virtual_device/: Cargo.toml
tools/virtual_device/src/: chain_router.rs  channel.rs  clock.rs  device.rs  display.rs  firmware.rs  flash.rs  hal.rs  input.rs  lib.rs  secrets.rs  serial.rs  sim_coordinator.rs  thread.rs  touch.rs  virtual_serial.rs
(+75 files in other folders)
